functional 1.20 port